--- a/src/Dorothy/project.json
+++ b/src/Dorothy/project.json
@@ -13,6 +13,8 @@
     "Microsoft.Framework.Configuration.Json": "1.0.0-beta7",
     "Microsoft.Framework.Logging": "1.0.0-beta7",
     "Microsoft.Framework.Logging.Console": "1.0.0-beta7",
+    "Microsoft.AspNet.Authentication": "1.0.0-beta7",
+    "Microsoft.AspNet.Authentication.Cookies": "1.0.0-beta7",
     "EntityFramework.SqlServer": "7.0.0-beta7",
     "EntityFramework.Commands": "7.0.0-beta7"
   },
