--- a/src/Dorothy/project.json
+++ b/src/Dorothy/project.json
@@ -16,7 +16,8 @@
     "Microsoft.AspNet.Authentication": "1.0.0-beta8",
     "Microsoft.AspNet.Authentication.Cookies": "1.0.0-beta8",
     "EntityFramework.SqlServer": "7.0.0-beta8",
-    "EntityFramework.Commands": "7.0.0-beta8"
+    "EntityFramework.Commands": "7.0.0-beta8",
+    "AutoMapper": "4.0.4"
   },
   
   "commands": {
