--- a/src/Dorothy/package.json
+++ b/src/Dorothy/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "ASP.NET",
+  "name": "Dorothy",
   "version": "0.0.0",
   "devDependencies": {
-    "gulp": "3.8.11",
-    "gulp-concat": "2.5.2",
-    "gulp-cssmin": "0.1.7",
-    "gulp-uglify": "1.2.0",
-    "rimraf": "2.2.8"
+    "gulp": "*",
+    "gulp-sass": "*",
+    "gulp-watch": "*",
+    "gulp-minify-css": "*",
+    "gulp-concat": "*",
+    "gulp-rename": "*",
+    "gulp-uglify": "*",
+    "rimraf": "*"
   }
 }
