--- a/src/Dorothy/project.json
+++ b/src/Dorothy/project.json
@@ -43,6 +43,6 @@
     "**.vspscc"
   ],
   "scripts": {
-    "prepublish": [ "npm install", "gulp clean", "gulp min" ]
+    "prepublish": [  ]
   }
 }
