--- a/src/Dorothy/package.json
+++ b/src/Dorothy/package.json
@@ -2,13 +2,13 @@
   "name": "Dorothy",
   "version": "0.0.0",
   "devDependencies": {
-    "gulp": "*",
-    "gulp-sass": "*",
-    "gulp-watch": "*",
-    "gulp-minify-css": "*",
-    "gulp-concat": "*",
-    "gulp-rename": "*",
-    "gulp-uglify": "*",
-    "rimraf": "*"
+    "gulp": "~3.9.0",
+    "gulp-sass": "~2.0.0",
+    "gulp-watch": "~4.3.0",
+    "gulp-minify-css": "~1.2.0",
+    "gulp-concat": "~2.6.0",
+    "gulp-rename": "~1.2.0",
+    "gulp-uglify": "~1.4.0",
+    "rimraf": "~2.4.0"
   }
 }
