Fixed dnu restore scripts.

--- a/src/Dorothy/project.json
+++ b/src/Dorothy/project.json
@@ -43,6 +43,7 @@
     "**.vspscc"
   ],
   "scripts": {
-    "prepublish": [  ]
+    "postrestore": [ "npm install" ],
+    "prepare": [ "gulp uglify", "gulp sass" ]
   }
 }
