--- a/src/Dorothy/package.json
+++ b/src/Dorothy/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "Dorothy",
+  "name": "app",
   "version": "0.0.0",
   "devDependencies": {
-    "gulp": "~3.9.0",
-    "gulp-sass": "~2.0.0",
-    "gulp-watch": "~4.3.0",
-    "gulp-minify-css": "~1.2.0",
-    "gulp-concat": "~2.6.0",
-    "gulp-rename": "~1.2.0",
-    "gulp-uglify": "~1.4.0",
-    "rimraf": "~2.4.0"
+    "gulp": "3.9.1",
+    "gulp-sass": "2.2.0",
+    "gulp-watch": "4.3.5",
+    "gulp-cssnano": "2.1.0",
+    "gulp-concat": "2.6.0",
+    "gulp-rename": "1.2.2",
+    "gulp-uglify": "1.5.2",
+    "rimraf": "2.5.1",
+    "gulp-autoprefixer": "3.1.0"
   }
 }
