Add minified files to source control.

--- a/src/Dorothy/project.json
+++ b/src/Dorothy/project.json
@@ -46,7 +46,7 @@
     "**.vspscc"
   ],
   "scripts": {
-    "postrestore": [ "npm install" ],
-    "prepare": [ "gulp js", "gulp css" ]
+    "postrestore": [ ],
+    "prepare": [ ]
   }
 }
