--- a/src/Dorothy/project.json
+++ b/src/Dorothy/project.json
@@ -21,7 +21,8 @@
     "Microsoft.Extensions.Configuration.Json": "1.0.0-*",
     "Microsoft.Extensions.Logging": "1.0.0-*",
     "Microsoft.Extensions.Logging.Console": "1.0.0-*",
-    "Microsoft.Extensions.Logging.Debug": "1.0.0-*"
+    "Microsoft.Extensions.Logging.Debug": "1.0.0-*",
+    "Haufwerk.Client": "0.0.12"
   },
   
   "commands": {
