--- a/src/Dorothy/project.json
+++ b/src/Dorothy/project.json
@@ -7,6 +7,8 @@
     "EntityFramework.Commands": "7.0.0-*",
     "EntityFramework.Core": "7.0.0-*",
     "EntityFramework.MicrosoftSqlServer": "7.0.0-*",
+    "Haufwerk.Client": "0.0.12",
+    "Microsoft.ApplicationInsights.AspNet": "1.0.0-rc1-update2",
     "Microsoft.AspNet.Authentication": "1.0.0-*",
     "Microsoft.AspNet.Authentication.Cookies": "1.0.0-*",
     "Microsoft.AspNet.Diagnostics": "1.0.0-*",
@@ -21,8 +23,7 @@
     "Microsoft.Extensions.Configuration.Json": "1.0.0-*",
     "Microsoft.Extensions.Logging": "1.0.0-*",
     "Microsoft.Extensions.Logging.Console": "1.0.0-*",
-    "Microsoft.Extensions.Logging.Debug": "1.0.0-*",
-    "Haufwerk.Client": "0.0.12"
+    "Microsoft.Extensions.Logging.Debug": "1.0.0-*"
   },
   
   "commands": {
